--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "roots/wp-password-bcrypt": "1.0.0",
     "wpackagist-plugin/wordpress-seo": "*",
     "wpackagist-plugin/types": ">2.0",
-    "wpackagist-plugin/addthis": ">5.3"
+    "wpackagist-plugin/addthis": ">5.3",
+    "wpackagist-plugin/svg-support": ">2.2.3"
   },
   "extra": {
     "installer-paths": {
