28336 create page with sidebar

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "wpackagist-plugin/wordpress-seo": "*",
     "wpackagist-plugin/types": ">2.0",
     "wpackagist-plugin/addthis": ">5.3",
-    "wpackagist-plugin/svg-support": ">2.2.3"
+    "wpackagist-plugin/svg-support": ">2.2.3",
+    "wpackagist-plugin/wysiwyg-widgets": ">2.3.0"
   },
   "extra": {
     "installer-paths": {
