--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "wpackagist-plugin/events-manager": ">5.6.4",
         "wpackagist-plugin/wp-pagenavi": ">2.90",
         "wpackagist-plugin/ns-featured-posts": ">1.3",
-        "wpackagist-plugin/tinymce-advanced": ">4.3.10"
+        "wpackagist-plugin/tinymce-advanced": ">4.3.10",
+        "wpackagist-plugin/contact-form-7": ">4.4.2",
+        "wpackagist-plugin/mappress-google-maps-for-wordpress": ">2.43"
     },
     "extra": {
         "installer-paths": {
