--- a/htdocs/composer.json
+++ b/htdocs/composer.json
@@ -27,7 +27,8 @@
         "wpackagist-plugin/ns-featured-posts": ">1.3",
         "wpackagist-plugin/tinymce-advanced": ">4.3.10",
         "wpackagist-plugin/contact-form-7": ">4.4.2",
-        "wpackagist-plugin/mappress-google-maps-for-wordpress": ">2.43"
+        "wpackagist-plugin/mappress-google-maps-for-wordpress": ">2.43",
+        "wpackagist-plugin/regenerate-thumbnails": ">2.2.5"
     },
     "extra": {
         "installer-paths": {
