--- a/htdocs/.gitignore
+++ b/htdocs/.gitignore
@@ -69,6 +69,7 @@ wp-content/plugins/*
 # Custom and changed plugins
 !wp-content/plugins/advanced-custom-fields-pro
 !wp-content/plugins/list-sub-pages
+!wp-content/plugins/forget-about-shortcode-buttons
 !wp-content/plugins/wordpress-23-related-posts-plugin
 !wp-content/plugins/category-color
 wp-content/mu-plugins/*/
