29422 Add plugin to composer.json

--- a/htdocs/composer.json
+++ b/htdocs/composer.json
@@ -28,7 +28,8 @@
         "wpackagist-plugin/tinymce-advanced": ">4.3.10",
         "wpackagist-plugin/contact-form-7": ">4.4.2",
         "wpackagist-plugin/mappress-google-maps-for-wordpress": ">2.43",
-        "wpackagist-plugin/regenerate-thumbnails": ">2.2.5"
+        "wpackagist-plugin/regenerate-thumbnails": ">2.2.5",
+        "wpackagist-plugin/simple-301-redirects": ">1.06"
     },
     "extra": {
         "installer-paths": {
